Fix the font sizes on mobile screens

--- a/assets/sass/small.sass
+++ b/assets/sass/small.sass
@@ -1,7 +1,7 @@
 // MOBILE
 @media only screen and (max-width: 600px)
   html, body
-    font-size: 16px
+    font-size: 14px
 
   // NAVBAR
   #navbar #navbar-content #site-title
@@ -50,10 +50,11 @@
 
       #homepage-title-container
         h1
-          font-size: 4em
+          font-size: 2em
 
         .subtitle
           margin: 0 20px
+          font-size: 1em
 
       figure#homepage-cover
         video, img
